--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,7 @@ set(CMAKE_CXX_EXTENSIONS        OFF)
 
 project(TimeEstimationApp)
 add_executable(${PROJECT_NAME} main.cpp)
+add_library(util lib/util.cpp)
+
 target_link_libraries(${PROJECT_NAME} PRIVATE sfml-graphics sfml-system sfml-window)
-target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
+target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
